# klatsch

./: .env  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  package-lock.json  release-plz.toml  trigger.txt
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  release-plz.yml  release.yml  test.yml
src/: chat.rs  configuration.rs  conversation.rs  http.rs  http_api.rs  klatsch.rs  last_event_id.rs  main.rs  persistence.rs  server.rs  sessions.rs  shutdown.rs  terminate_on_shutdown.rs  tracing.rs  user.rs
src/chat/: chat_http.rs  chat_persistence.rs  chat_runtime.rs  chat_store.rs  event.rs  history.rs  message.rs  persistent_chat.rs  shared.rs  terminate_if.rs
src/http/: authenticate.rs  http_error.rs  last_event_id.rs
src/persistence/: arguments.rs  migrate.rs  parameters.rs  shared.rs  sqlite.rs
src/persistence/tests/: v1.db
src/server/: api.rs  http_api.rs  last_event_id.rs  session_cookie.rs  ui.rs
src/sessions/: session_http.rs  session_id.rs  session_persistence.rs  session_store.rs  sessions_runtime.rs  sessions_store.rs
src/tracing/: format.rs
src/user/: password_hash.rs  user_http.rs  user_id.rs  user_persistence.rs
tests/: integration.rs
ui/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts
ui/src/lib/: user.svelte.ts  user_cache.svelte.test.ts  user_cache.svelte.ts
ui/src/lib/components/: ChatMessages.browser.svelte.test.ts  ChatMessages.svelte  ChatMessages.svelte.test.ts  Login.svelte  Login.svelte.test.ts  SendMessage.svelte  SendMessage.svelte.test.ts  UserBar.svelte  UserBar.svelte.test.ts  UserPicker.svelte
ui/src/lib/components/test-commands/: sse-server.ts
ui/src/lib/stores/: user.ts
ui/src/routes/: +layout.svelte  +layout.ts  +page.svelte
