[package]
name = "klatsch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-sqlite = "0.5.6"
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["macros"] }
dotenv = "0.15.0"
futures-util = "0.3.32"
http-body-util = "0.1.3"
memory-serve = { version = "2.1.0" }
# Used to implement log formatting. We need our own formatting in order to provide operater-friendly
# sources in the logs. E.g. `server` instead of `axum::serve` and `http` instead of
# `tower_http::trace::on_request`.
nu-ansi-term = "0.50.3"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "rt", "signal"] }
# `sync` feature is required for `BroadcastStream`.
tokio-stream = { version = "0.1.18", features = ["sync"] }
# Axum builds on top of tower. We use it directly to inject tracing middleware to gain observability
# into http requests.
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["serde"] }

[dev-dependencies]
double-trait = { version = "0.2.9", features = ["stream"] }
eventsource-stream = "0.2.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.50.0", features = ["process", "time"] }
tokio-test = "0.4.5"
tower = { version = "0.5.3", features = ["util"] }
uuid = { version = "1.22.0", features = ["serde", "v7"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.31.1", features = ["process", "signal"] }

[build-dependencies]
# Used to serve the ui statically. Dynamic loading is broken under windows. Force embed makes our
# UI work under windows, too. We use the node dev server for hot reload anyway for UI development.
memory-serve = { version = "2.1.0", features = ["force-embed"] }

[profile.release]
panic = "abort"
lto = true
