[package]
name = "klatsch"
version = "0.1.1"
edition = "2024"
license = "MIT"
# Klatsch is a binary and currently not intended to be published at crates.io. Publishing is
# disabled via `publish = false` in release-plz.toml instead — setting it here would make
# release-plz skip the crate entirely, producing no release PR or GitHub release.
# publish = false

[dependencies]
anyhow = "1.0.102"
async-sqlite = "0.5.7"
async-stream = "0.3.6"
axum = { version = "0.8.9", features = ["macros"] }
dotenvy = "0.15.7"
fs2 = "0.4.3"
futures-util = "0.3.32"
http-body-util = "0.1.3"
# Used to implement log formatting. We need our own formatting in order to provide operater-friendly
# sources in the logs. E.g. `server` instead of `axum::serve` and `http` instead of
# `tower_http::trace::on_request`.
nu-ansi-term = "0.50.3"
serde = { version = "1.0.228", features = ["derive"] }
static-serve = "0.6.1"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "rt", "signal", "fs"] }
# `sync` feature is required for `BroadcastStream`.
tokio-stream = { version = "0.1.18", features = ["sync"] }
# Axum builds on top of tower. We use it directly to inject tracing middleware to gain observability
# into http requests.
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["serde"] }

[dev-dependencies]
double-trait = { version = "0.2.9", features = ["stream"] }
eventsource-stream = "0.2.3"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["process", "time"] }
tokio-test = "0.4.5"
tower = { version = "0.5.3", features = ["util"] }
uuid = { version = "1.23.1", features = ["serde", "v7"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.31.1", features = ["process", "signal"] }

[profile.release]
panic = "abort"
lto = true

[build-dependencies]
# Used to compute an aggregated has of all the sources and build artifacts of the UI, in order to
# detect change and trigger rebuilds.
blake3 = "1.8.5"
# Used to walk all the sources and build artifacts of the UI.
walkdir = "2.5.0"
